<resources>
    <string name="app_name">Food Application</string>
    <string name="name">Ashu Choudhary</string>
    <string name="e_mail">ashuchoudhary@gmail.com</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order History</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log out</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="mobile_number">Enter your Mobile No.</string>
    <string name="password">Enter your Password</string>
    <string name="log_in">Log In</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="todo">TODO</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="preferences_file">Shared Preferences</string>
    <string name="mobile">+91 7983132721</string>
    <string name="address">Muzaffarnagar, Uttar Pradesh, 251001</string>
    <string name="connection">Connection</string>

    <string-array name="faq_questions">
        <item>Q: What are the operating hours?</item>
        <item>Q: Do you offer vegan options?</item>
        <item>Q: How can I make a reservation?</item>
        <item>Q: What is your delivery radius?</item>
        <item>Q: Do you have gluten-free options?</item>
        <item>Q: What payment methods do you accept?</item>
        <item>Q: Can I modify my order after placing it?</item>
        <item>Q: Can I modify my order after placing it?</item>
        <item>Q: Can I modify my order after placing it?</item>
        <item>Q: Can I modify my order after placing it?</item>
    </string-array>

    <string-array name="faq_answers">
        <item>Ans: Our operating hours are from 9 AM to 10 PM from Monday to Sunday.</item>
        <item>Ans: Yes, we offer a variety of vegan options on our menu. Please check the Vegan section in our app.</item>
        <item>Ans: You can make a reservation by calling us at our contact number or through our website and app.</item>
        <item>Ans: We deliver within a 5-mile radius from our location. Please enter your address in the app to check if we deliver to you.</item>
        <item>Ans: Yes, we have a selection of gluten-free dishes. Look for the gluten-free label on our menu items.</item>
        <item>Ans: We accept all major credit cards, debit cards, and mobile payment options like Apple Pay and Google Pay.</item>
        <item>Ans: Yes, you can modify your order within 10 minutes of placing it by contacting our customer support.</item>
        <item>Ans: Yes, you can modify your order within 10 minutes of placing it by contacting our customer support.</item>
        <item>Ans: Yes, you can modify your order within 10 minutes of placing it by contacting our customer support.</item>
        <item>Ans: Yes, you can modify your order within 10 minutes of placing it by contacting our customer support.</item>
    </string-array>
</resources>