<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfileFragment"
    android:background="#2F5959">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile"
        android:layout_width="160dp"
        android:layout_height="165dp"
        app:cardCornerRadius="80dp"
        android:elevation="0dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#2F5959"
        android:layout_margin="20dp"
        >

        <ImageView

            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/profile" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:layout_below="@+id/profile"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textStyle="italic"
        android:padding="5dp"
        />
    <TextView
        android:id="@+id/mobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobile"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/name"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textStyle="italic"
        android:padding="5dp"
        />
    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/mobile"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textStyle="italic"
        android:padding="5dp"
        />
    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address"
        android:textSize="22sp"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/email"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textStyle="italic"
        android:padding="5dp"
        />


</RelativeLayout>